--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
             </svg>
           </button>
           <button class="card__like-button button">
+            <span class="visually-hidden">Поставить лайк</span>
             <span class="button__text">Like</span>
           </button>
         </div>
@@ -86,6 +87,7 @@
             </svg>
           </button>
           <button class="card__like-button button">
+            <span class="visually-hidden">Поставить лайк</span>
             <span class="button__text">Like</span>
           </button>
         </div>
@@ -119,6 +121,7 @@
             </svg>
           </button>
           <button class="card__like-button button">
+            <span class="visually-hidden">Поставить лайк</span>
             <span class="button__text">Like</span>
           </button>
         </div>
@@ -152,6 +155,7 @@
             </svg>
           </button>
           <button class="card__like-button button">
+            <span class="visually-hidden">Поставить лайк</span>
             <span class="button__text">Like</span>
           </button>
         </div>
@@ -185,6 +189,7 @@
             </svg>
           </button>
           <button class="card__like-button button">
+            <span class="visually-hidden">Поставить лайк</span>
             <span class="button__text">Like</span>
           </button>
         </div>
@@ -218,6 +223,7 @@
             </svg>
           </button>
           <button class="card__like-button button">
+            <span class="visually-hidden">Поставить лайк</span>
             <span class="button__text">Like</span>
           </button>
         </div>
@@ -251,6 +257,7 @@
             </svg>
           </button>
           <button class="card__like-button button">
+            <span class="visually-hidden">Поставить лайк</span>
             <span class="button__text">Like</span>
           </button>
         </div>
@@ -285,6 +292,7 @@
             </svg>
           </button>
           <button class="card__like-button button">
+            <span class="visually-hidden">Поставить лайк</span>
             <span class="button__text">Like</span>
           </button>
         </div>
@@ -312,6 +320,7 @@
         </span>
       </div>
         <button class="button button-dialog" onclick="document.getElementById('menu-dialog').close()">
+          <span class="visually-hidden">Закрыть всплывающее окно</span>
           ок
         </button>
     </dialog>
