--- a/index.html
+++ b/index.html
@@ -15,20 +15,20 @@
   <body class="page">
     <div class="header__background"></div>
     <header class="header">
-      <article class="header__card">
+      <div class="header__card">
         <h1 class="logo">
           &lt;/html&gt;
         </h1>
         <h2 class="header__title">
           закрывающий тег
         </h2>
-      </article>
+      </div>
     </header>
     <main class="main">
         <article class="card">
-          <h3 class="card__title">
+          <h2 class="card__title">
             Фритрек и нулевой спринт: Подготовка к работе
-          </h3>
+          </h2>
           <div class="label__image-container">
             <span class="label-bigletters label_decore">&lt;/HTML&gt;</span>
             <img class="image contrast-image" src="./images/Zero_sprint.png" alt="Пиксельная ночная картинка белого фургона">
@@ -42,8 +42,8 @@
           <p class="card__subtext card-text-decore">
             Место для ваших воспоминаний о начале обучения.
           </p>
-          <button class="card__icon-button">
-            <svg class="like-icon" width="39" height="36" viewBox="0 0 39 36" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <button type="button" class="card__icon-button">
+            <svg aria-hidden="true" class="like-icon" width="39" height="36" viewBox="0 0 39 36" fill="none" xmlns="http://www.w3.org/2000/svg">
               <g class="heart">
                 <path class="contour" d="M12 6H9V9H12V6ZM15 6H12V9H15V6ZM9 9H6V12H9V9ZM9 12H6V15H9V12ZM9 15H6V18H9V15ZM18 6H15V9H18V6ZM12 18H9V21H12V18ZM15 21H12V24H15V21ZM18 24H15V27H18V24ZM27 6H30V9H27V6ZM24 6H27V9H24V6ZM30 9H33V12H30V9ZM30 12H33V15H30V12ZM30 15H33V18H30V15ZM21 6H24V9H21V6ZM27 18H30V21H27V18ZM24 21H27V24H24V21ZM21 24H24V27H21V24ZM21 27H18V30H21V27ZM21 9H18V12H21V9Z" fill="var(--contour-color)"/>
                 <path class="core" d="M18 15H15V18H18V15ZM21 15H24V18H21V15ZM21 15H18V18H21V15ZM21 12H18V15H21V12ZM21 18H18V21H21V18Z" fill="none"/>
@@ -52,17 +52,16 @@
                 <path class="sparks" d="M36 13H39V16H36V13ZM27 27H30V30H27V27ZM18 33H21V36H18V33ZM9 27H12V30H9V27ZM24 0H27V3H24V0ZM33 3H36V6H33V3ZM3 3H6V6H3V3ZM12 0H15V3H12V0ZM0 13H3V16H0V13Z" fill="none"/>
             </svg>
           </button>
-          <button class="card__like-button button">
-            <span class="visually-hidden">Поставить лайк</span>
+          <button type="button" class="card__like-button button">
             <span class="button__text">Like</span>
           </button>
         </div>
       </article>
 
         <article class="card">
-          <h3 class="card__title">
+          <h2 class="card__title">
             1 спринт: Я — чистый лист
-          </h3>
+          </h2>
           <div class="label__image-container">
             <span class="label-bigletters label_decore">&lt;/HTML&gt;</span>
             <img class="image blur-image" src="./images/Zero_sprint.png" alt="Пиксельная ночная картинка белого фургона">
@@ -76,8 +75,8 @@
           <p class="card__subtext card-text-decore">
             Место для ваших воспоминаний о начале первого спринта.
           </p>
-          <button class="card__icon-button">
-            <svg class="like-icon" width="39" height="36" viewBox="0 0 39 36" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <button type="button" class="card__icon-button">
+            <svg aria-hidden="true" class="like-icon" width="39" height="36" viewBox="0 0 39 36" fill="none" xmlns="http://www.w3.org/2000/svg">
               <g class="heart">
                 <path class="contour" d="M12 6H9V9H12V6ZM15 6H12V9H15V6ZM9 9H6V12H9V9ZM9 12H6V15H9V12ZM9 15H6V18H9V15ZM18 6H15V9H18V6ZM12 18H9V21H12V18ZM15 21H12V24H15V21ZM18 24H15V27H18V24ZM27 6H30V9H27V6ZM24 6H27V9H24V6ZM30 9H33V12H30V9ZM30 12H33V15H30V12ZM30 15H33V18H30V15ZM21 6H24V9H21V6ZM27 18H30V21H27V18ZM24 21H27V24H24V21ZM21 24H24V27H21V24ZM21 27H18V30H21V27ZM21 9H18V12H21V9Z" fill="var(--contour-color)"/>
                 <path class="core" d="M18 15H15V18H18V15ZM21 15H24V18H21V15ZM21 15H18V18H21V15ZM21 12H18V15H21V12ZM21 18H18V21H21V18Z" fill="none"/>
@@ -86,17 +85,16 @@
                 <path class="sparks" d="M36 13H39V16H36V13ZM27 27H30V30H27V27ZM18 33H21V36H18V33ZM9 27H12V30H9V27ZM24 0H27V3H24V0ZM33 3H36V6H33V3ZM3 3H6V6H3V3ZM12 0H15V3H12V0ZM0 13H3V16H0V13Z" fill="none"/>
             </svg>
           </button>
-          <button class="card__like-button button">
-            <span class="visually-hidden">Поставить лайк</span>
+          <button type="button" class="card__like-button button">
             <span class="button__text">Like</span>
           </button>
         </div>
         </article>
 
         <article class="card">
-          <h3 class="card__title">
+          <h2 class="card__title">
             1 спринт: А если не получится?
-          </h3>
+          </h2>
           <div class="label__image-container">
             <span class="label-bigletters label_decore">&lt;css&gt;</span>
             <img class="image grayscale__blur-image" src="./images/Zero_sprint.png" alt="Пиксельная ночная картинка белого фургона">
@@ -110,8 +108,8 @@
           <p class="card__subtext card-text-decore">
             Место для ваших воспоминаний об окончании первого спринта.
           </p>
-          <button class="card__icon-button">
-            <svg class="like-icon" width="39" height="36" viewBox="0 0 39 36" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <button type="button" class="card__icon-button">
+            <svg aria-hidden="true" class="like-icon" width="39" height="36" viewBox="0 0 39 36" fill="none" xmlns="http://www.w3.org/2000/svg">
               <g class="heart">
                 <path class="contour" d="M12 6H9V9H12V6ZM15 6H12V9H15V6ZM9 9H6V12H9V9ZM9 12H6V15H9V12ZM9 15H6V18H9V15ZM18 6H15V9H18V6ZM12 18H9V21H12V18ZM15 21H12V24H15V21ZM18 24H15V27H18V24ZM27 6H30V9H27V6ZM24 6H27V9H24V6ZM30 9H33V12H30V9ZM30 12H33V15H30V12ZM30 15H33V18H30V15ZM21 6H24V9H21V6ZM27 18H30V21H27V18ZM24 21H27V24H24V21ZM21 24H24V27H21V24ZM21 27H18V30H21V27ZM21 9H18V12H21V9Z" fill="var(--contour-color)"/>
                 <path class="core" d="M18 15H15V18H18V15ZM21 15H24V18H21V15ZM21 15H18V18H21V15ZM21 12H18V15H21V12ZM21 18H18V21H21V18Z" fill="none"/>
@@ -120,17 +118,16 @@
                 <path class="sparks" d="M36 13H39V16H36V13ZM27 27H30V30H27V27ZM18 33H21V36H18V33ZM9 27H12V30H9V27ZM24 0H27V3H24V0ZM33 3H36V6H33V3ZM3 3H6V6H3V3ZM12 0H15V3H12V0ZM0 13H3V16H0V13Z" fill="none"/>
             </svg>
           </button>
-          <button class="card__like-button button">
-            <span class="visually-hidden">Поставить лайк</span>
+          <button type="button" class="card__like-button button">
             <span class="button__text">Like</span>
           </button>
         </div>
         </article>
 
         <article class="card">
-          <h3 class="card__title">
+          <h2 class="card__title">
             2 спринт: Погоня за идеалом
-          </h3>
+          </h2>
           <div class="label__image-container">
             <span class="label_decore">&lt;desigions&gt;</span>
             <img class="image saturate-image" src="./images/Zero_sprint.png" alt="Пиксельная ночная картинка белого фургона">
@@ -144,8 +141,8 @@
           <p class="card__subtext card-text-decore">
             Место для ваших воспоминаний о начале второго спринта.
           </p>
-          <button class="card__icon-button">
-            <svg class="like-icon" width="39" height="36" viewBox="0 0 39 36" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <button type="button" class="card__icon-button">
+            <svg aria-hidden="true" class="like-icon" width="39" height="36" viewBox="0 0 39 36" fill="none" xmlns="http://www.w3.org/2000/svg">
               <g class="heart">
                 <path class="contour" d="M12 6H9V9H12V6ZM15 6H12V9H15V6ZM9 9H6V12H9V9ZM9 12H6V15H9V12ZM9 15H6V18H9V15ZM18 6H15V9H18V6ZM12 18H9V21H12V18ZM15 21H12V24H15V21ZM18 24H15V27H18V24ZM27 6H30V9H27V6ZM24 6H27V9H24V6ZM30 9H33V12H30V9ZM30 12H33V15H30V12ZM30 15H33V18H30V15ZM21 6H24V9H21V6ZM27 18H30V21H27V18ZM24 21H27V24H24V21ZM21 24H24V27H21V24ZM21 27H18V30H21V27ZM21 9H18V12H21V9Z" fill="var(--contour-color)"/>
                 <path class="core" d="M18 15H15V18H18V15ZM21 15H24V18H21V15ZM21 15H18V18H21V15ZM21 12H18V15H21V12ZM21 18H18V21H21V18Z" fill="none"/>
@@ -154,17 +151,16 @@
                 <path class="sparks" d="M36 13H39V16H36V13ZM27 27H30V30H27V27ZM18 33H21V36H18V33ZM9 27H12V30H9V27ZM24 0H27V3H24V0ZM33 3H36V6H33V3ZM3 3H6V6H3V3ZM12 0H15V3H12V0ZM0 13H3V16H0V13Z" fill="none"/>
             </svg>
           </button>
-          <button class="card__like-button button">
-            <span class="visually-hidden">Поставить лайк</span>
+          <button type="button" class="card__like-button button">
             <span class="button__text">Like</span>
           </button>
         </div>
         </article>
 
         <article class="card">
-          <h3 class="card__title">
+          <h2 class="card__title">
             2 спринт: О тех, кто рядом
-          </h3>
+          </h2>
           <div class="label__image-container">
             <span class="label_decore">&lt;care&gt;</span>
             <img class="image hue-rotate-image" src="./images/Zero_sprint.png" alt="Пиксельная ночная картинка белого фургона">
@@ -178,8 +174,8 @@
           <p class="card__subtext card-text-decore">
             Место для ваших воспоминаний об окончании второго спринта.
           </p>
-          <button class="card__icon-button">
-            <svg class="like-icon" width="39" height="36" viewBox="0 0 39 36" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <button type="button" class="card__icon-button">
+            <svg aria-hidden="true" class="like-icon" width="39" height="36" viewBox="0 0 39 36" fill="none" xmlns="http://www.w3.org/2000/svg">
               <g class="heart">
                 <path class="contour" d="M12 6H9V9H12V6ZM15 6H12V9H15V6ZM9 9H6V12H9V9ZM9 12H6V15H9V12ZM9 15H6V18H9V15ZM18 6H15V9H18V6ZM12 18H9V21H12V18ZM15 21H12V24H15V21ZM18 24H15V27H18V24ZM27 6H30V9H27V6ZM24 6H27V9H24V6ZM30 9H33V12H30V9ZM30 12H33V15H30V12ZM30 15H33V18H30V15ZM21 6H24V9H21V6ZM27 18H30V21H27V18ZM24 21H27V24H24V21ZM21 24H24V27H21V24ZM21 27H18V30H21V27ZM21 9H18V12H21V9Z" fill="var(--contour-color)"/>
                 <path class="core" d="M18 15H15V18H18V15ZM21 15H24V18H21V15ZM21 15H18V18H21V15ZM21 12H18V15H21V12ZM21 18H18V21H21V18Z" fill="none"/>
@@ -188,17 +184,16 @@
                 <path class="sparks" d="M36 13H39V16H36V13ZM27 27H30V30H27V27ZM18 33H21V36H18V33ZM9 27H12V30H9V27ZM24 0H27V3H24V0ZM33 3H36V6H33V3ZM3 3H6V6H3V3ZM12 0H15V3H12V0ZM0 13H3V16H0V13Z" fill="none"/>
             </svg>
           </button>
-          <button class="card__like-button button">
-            <span class="visually-hidden">Поставить лайк</span>
+          <button type="button" class="card__like-button button">
             <span class="button__text">Like</span>
           </button>
         </div>
         </article>
 
         <article class="card">
-          <h3 class="card__title">
+          <h2 class="card__title">
             3 спринт: Обходные стратегии
-          </h3>
+          </h2>
           <div class="label__image-container">
             <span class="label_decore">&lt;support&gt;</span>
             <img class="image sepia-image" src="./images/Zero_sprint.png" alt="Пиксельная ночная картинка белого фургона">
@@ -212,8 +207,8 @@
           <p class="card__subtext card-text-decore">
             Место для ваших воспоминаний о начале третьего спринта.
           </p>
-          <button class="card__icon-button">
-            <svg class="like-icon" width="39" height="36" viewBox="0 0 39 36" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <button type="button" class="card__icon-button">
+            <svg aria-hidden="true" class="like-icon" width="39" height="36" viewBox="0 0 39 36" fill="none" xmlns="http://www.w3.org/2000/svg">
               <g class="heart">
                 <path class="contour" d="M12 6H9V9H12V6ZM15 6H12V9H15V6ZM9 9H6V12H9V9ZM9 12H6V15H9V12ZM9 15H6V18H9V15ZM18 6H15V9H18V6ZM12 18H9V21H12V18ZM15 21H12V24H15V21ZM18 24H15V27H18V24ZM27 6H30V9H27V6ZM24 6H27V9H24V6ZM30 9H33V12H30V9ZM30 12H33V15H30V12ZM30 15H33V18H30V15ZM21 6H24V9H21V6ZM27 18H30V21H27V18ZM24 21H27V24H24V21ZM21 24H24V27H21V24ZM21 27H18V30H21V27ZM21 9H18V12H21V9Z" fill="var(--contour-color)"/>
                 <path class="core" d="M18 15H15V18H18V15ZM21 15H24V18H21V15ZM21 15H18V18H21V15ZM21 12H18V15H21V12ZM21 18H18V21H21V18Z" fill="none"/>
@@ -222,17 +217,16 @@
                 <path class="sparks" d="M36 13H39V16H36V13ZM27 27H30V30H27V27ZM18 33H21V36H18V33ZM9 27H12V30H9V27ZM24 0H27V3H24V0ZM33 3H36V6H33V3ZM3 3H6V6H3V3ZM12 0H15V3H12V0ZM0 13H3V16H0V13Z" fill="none"/>
             </svg>
           </button>
-          <button class="card__like-button button">
-            <span class="visually-hidden">Поставить лайк</span>
+          <button type="button" class="card__like-button button">
             <span class="button__text">Like</span>
           </button>
         </div>
         </article>
 
         <article class="card">
-          <h3 class="card__title">
+          <h2 class="card__title">
             3 спринт: Когда опускаются руки
-          </h3>
+          </h2>
           <div class="label__image-container">
             <span class="label_decore">&lt;lifes-style: none;&gt;</span>
             <img class="image invert-image" src="./images/Zero_sprint.png" alt="Пиксельная ночная картинка белого фургона">
@@ -246,8 +240,8 @@
           <p class="card__subtext card-text-decore">
             Место для ваших воспоминаний об окончании третьего спринта.
           </p>
-          <button class="card__icon-button">
-            <svg class="like-icon" width="39" height="36" viewBox="0 0 39 36" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <button type="button" class="card__icon-button">
+            <svg aria-hidden="true" class="like-icon" width="39" height="36" viewBox="0 0 39 36" fill="none" xmlns="http://www.w3.org/2000/svg">
               <g class="heart">
                 <path class="contour" d="M12 6H9V9H12V6ZM15 6H12V9H15V6ZM9 9H6V12H9V9ZM9 12H6V15H9V12ZM9 15H6V18H9V15ZM18 6H15V9H18V6ZM12 18H9V21H12V18ZM15 21H12V24H15V21ZM18 24H15V27H18V24ZM27 6H30V9H27V6ZM24 6H27V9H24V6ZM30 9H33V12H30V9ZM30 12H33V15H30V12ZM30 15H33V18H30V15ZM21 6H24V9H21V6ZM27 18H30V21H27V18ZM24 21H27V24H24V21ZM21 24H24V27H21V24ZM21 27H18V30H21V27ZM21 9H18V12H21V9Z" fill="var(--contour-color)"/>
                 <path class="core" d="M18 15H15V18H18V15ZM21 15H24V18H21V15ZM21 15H18V18H21V15ZM21 12H18V15H21V12ZM21 18H18V21H21V18Z" fill="none"/>
@@ -256,17 +250,16 @@
                 <path class="sparks" d="M36 13H39V16H36V13ZM27 27H30V30H27V27ZM18 33H21V36H18V33ZM9 27H12V30H9V27ZM24 0H27V3H24V0ZM33 3H36V6H33V3ZM3 3H6V6H3V3ZM12 0H15V3H12V0ZM0 13H3V16H0V13Z" fill="none"/>
             </svg>
           </button>
-          <button class="card__like-button button">
-            <span class="visually-hidden">Поставить лайк</span>
+          <button type="button" class="card__like-button button">
             <span class="button__text">Like</span>
           </button>
         </div>
         </article>
 
         <article class="card">
-          <h3 class="card__title">
+          <h2 class="card__title">
             «Сейчас я здесь»
-          </h3>
+          </h2>
           <div class="label__image-container">
             <span class="label_decore">&lt;experience&gt;</span>
             <img class="image" src="./images/Zero_sprint.png" alt="Пиксельная ночная картинка белого фургона">
@@ -281,8 +274,8 @@
           <p class="card__subtext card-text-decore">
             Место, чтобы остановиться, подумать и написать, что вы чувствуете в этой точке пути.
           </p>
-          <button class="card__icon-button">
-            <svg class="like-icon" width="39" height="36" viewBox="0 0 39 36" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <button type="button" class="card__icon-button">
+            <svg aria-hidden="true" class="like-icon" width="39" height="36" viewBox="0 0 39 36" fill="none" xmlns="http://www.w3.org/2000/svg">
               <g class="heart">
                 <path class="contour" d="M12 6H9V9H12V6ZM15 6H12V9H15V6ZM9 9H6V12H9V9ZM9 12H6V15H9V12ZM9 15H6V18H9V15ZM18 6H15V9H18V6ZM12 18H9V21H12V18ZM15 21H12V24H15V21ZM18 24H15V27H18V24ZM27 6H30V9H27V6ZM24 6H27V9H24V6ZM30 9H33V12H30V9ZM30 12H33V15H30V12ZM30 15H33V18H30V15ZM21 6H24V9H21V6ZM27 18H30V21H27V18ZM24 21H27V24H24V21ZM21 24H24V27H21V24ZM21 27H18V30H21V27ZM21 9H18V12H21V9Z" fill="var(--contour-color)"/>
                 <path class="core" d="M18 15H15V18H18V15ZM21 15H24V18H21V15ZM21 15H18V18H21V15ZM21 12H18V15H21V12ZM21 18H18V21H21V18Z" fill="none"/>
@@ -291,39 +284,35 @@
                 <path class="sparks" d="M36 13H39V16H36V13ZM27 27H30V30H27V27ZM18 33H21V36H18V33ZM9 27H12V30H9V27ZM24 0H27V3H24V0ZM33 3H36V6H33V3ZM3 3H6V6H3V3ZM12 0H15V3H12V0ZM0 13H3V16H0V13Z" fill="none"/>
             </svg>
           </button>
-          <button class="card__like-button button">
-            <span class="visually-hidden">Поставить лайк</span>
+          <button type="button" class="card__like-button button">
             <span class="button__text">Like</span>
           </button>
         </div>
         </article>
-    </main>
-    <footer class="footer">
-      <button class="button button__save" onclick="window['menu-dialog'].showModal()">
-        <span class="visually-hidden">Сохранить на память</span>
-        <svg  viewBox="0 0 39 39">
-          <use href="/svg/floppy.svg#floppy"></use>
-        </svg>
-        <span class="button__text">
-          Сохранить на память
-        </span>
-      </button>
-    </footer>
-    <dialog id="menu-dialog" class="dialog">
-      <div class="text-dialog-cont">
-        <svg class="floppy-dialog" viewBox="0 0 39 39">
-          <use href="/svg/floppy.svg#floppy"></use>
-        </svg>
-        <span class="text-dialog">
-          Вставьте
-          дискету, чтобы продолжить
-        </span>
-      </div>
-        <button class="button button-dialog" onclick="document.getElementById('menu-dialog').close()">
-          <span class="visually-hidden">Закрыть всплывающее окно</span>
-          ок
+        <button type="button" class="button button__save" onclick="window['menu-dialog'].showModal()">
+          <svg  viewBox="0 0 39 39">
+            <use href="/svg/floppy.svg#floppy"></use>
+          </svg>
+          <span class="button__text">
+            Сохранить на память
+          </span>
         </button>
-    </dialog>
+        <dialog id="menu-dialog" class="dialog">
+          <div class="text-dialog-cont">
+            <svg class="floppy-dialog" viewBox="0 0 39 39">
+              <use href="/svg/floppy.svg#floppy"></use>
+            </svg>
+            <p class="text-dialog">
+              Вставьте
+              дискету, чтобы продолжить
+            </p>
+          </div>
+            <button type="button" class="button button-dialog" onclick="document.getElementById('menu-dialog').close()">
+              ок
+            </button>
+        </dialog>
+    </main>
+    
     <script src="./scripts/like.js"></script>
   </body>
 </html>
