--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
         </article>
         <button type="button" class="button button__save" onclick="window['menu-dialog'].showModal()">
           <svg  viewBox="0 0 39 39">
-            <use href="./svg/floppy.svg"></use>
+            <use href="./svg/floppy.svg#floppy"></use>
           </svg>
           <span class="button__text">
             Сохранить на память
@@ -300,7 +300,7 @@
         <dialog id="menu-dialog" class="dialog">
           <div class="text-dialog-cont">
             <svg class="floppy-dialog" viewBox="0 0 39 39">
-              <use href="./svg/floppy.svg"></use>
+              <use href="./svg/floppy.svg#floppy"></use>
             </svg>
             <p class="text-dialog">
               Вставьте
