--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
     <link rel="stylesheet" href="./styles/animations.css" />
   </head>
   <body class="page">
-    <div class="header__background"></div>
     <header class="header">
       <div class="header__card">
         <h1 class="logo">
@@ -76,7 +75,7 @@
             Место для ваших воспоминаний о начале первого спринта.
           </p>
           <button type="button" class="card__icon-button">
-            <svg aria-hidden="true" class="like-icon" width="39" height="36" viewBox="0 0 39 36" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <svg aria-hidden="true" class="like-icon" preserveAspectRatio="none" viewBox="0 0 39 36" fill="none" xmlns="http://www.w3.org/2000/svg">
               <g class="heart">
                 <path class="contour" d="M12 6H9V9H12V6ZM15 6H12V9H15V6ZM9 9H6V12H9V9ZM9 12H6V15H9V12ZM9 15H6V18H9V15ZM18 6H15V9H18V6ZM12 18H9V21H12V18ZM15 21H12V24H15V21ZM18 24H15V27H18V24ZM27 6H30V9H27V6ZM24 6H27V9H24V6ZM30 9H33V12H30V9ZM30 12H33V15H30V12ZM30 15H33V18H30V15ZM21 6H24V9H21V6ZM27 18H30V21H27V18ZM24 21H27V24H24V21ZM21 24H24V27H21V24ZM21 27H18V30H21V27ZM21 9H18V12H21V9Z" fill="var(--contour-color)"/>
                 <path class="core" d="M18 15H15V18H18V15ZM21 15H24V18H21V15ZM21 15H18V18H21V15ZM21 12H18V15H21V12ZM21 18H18V21H21V18Z" fill="none"/>
@@ -308,7 +307,7 @@
             </p>
           </div>
             <button type="button" class="button button-dialog" onclick="document.getElementById('menu-dialog').close()">
-              ок
+              <span class="button__text">ок</span>
             </button>
         </dialog>
     </main>
