Подправил координаты label для 375px

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
             2 спринт: О тех, кто рядом
           </h2>
           <div class="label__image-container">
-            <span class="label_decore">&lt;care&gt;</span>
+            <span class="label_decore">care</span>
             <img class="image hue-rotate-image" src="./images/Zero_sprint.png" alt="Пиксельная ночная картинка белого фургона">
           </div>
           <div class="card__text_button-container">
